<resources>
    <string name="app_name">Mitch\'s Weather App</string>
    <string name="temperature">%1$d°</string>
    <string name="st_paul_mn">St. Paul, MN</string>
    <string name="feelsLike">Feels like: %1$d°</string>
    <string name="low">Low %1$d°</string>
    <string name="high">High %1$d°</string>
    <string name="humidity">Humidity %1$d%%</string>
    <string name="pressure">Pressure %1$d hPa</string>
    <string name="zip_code">Zip Code</string>
</resources>